# noise-reducer

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: build.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Release.entitlements  info.plist  tauri.conf.json
src-tauri/src/: fir.rs  main.rs  rnn.rs  transcode.rs
src/components/: player.tsx  recorder.tsx
src/hooks/: audio.tsx
src/lib/: event.ts
